EXPLORE-35: Dto Updated